# onebotv11_rs

./: Cargo.toml  readme.md
onebot_v11/: Cargo.toml  readme.md
onebot_v11/examples/: send_forward_msg.rs  set_emoji.rs  temp.rs
onebot_v11/src/: lib.rs
onebot_v11/src/api/: mod.rs  payload.rs  resp.rs  util.rs
onebot_v11/src/connect/: http.rs  mod.rs  ws.rs  ws_reverse.rs
onebot_v11/src/event/: message.rs  meta.rs  mod.rs  notice.rs  request.rs
onebot_v11/src/message/: mod.rs  segment.rs
onebot_v11/src/traits/: mod.rs
onebot_v11_macro/: Cargo.toml  readme.md
onebot_v11_macro/src/: lib.rs
