[package]
name = "onebot_v11"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
onebot_v11_macro = { path = "../onebot_v11_macro" }
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"

