[package]
name = "onebot_v11"
version = "0.1.4"
edition = "2021"
description = "OneBot v11 with NapCat/llonebot extension"
license = "MIT OR Apache-2.0"
repository = "https://github.com/canxin121/onebotv11_rs"
readme = "readme.md"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
onebot_v11_macro = { version = "0.1.0" }
reqwest = { version = "0.12.7", features = [
    "json",
    "rustls-tls",
], default-features = false }

anyhow = "1.0.86"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
rand = "0.8.5"
